--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto p-5"><p class="lead">Possuo aproximadamente 8 anos na área e já trabalhei para grandes YouTubers, um deles com mais de 1 milhão de inscritos. Também, administrei meu canal no YouTube, com pouco mais de 15.000 inscritos na plataforma, fazendo a edição de todos os vídeos.</p></div>
+                    <div class="col-lg-4 me-auto"><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." /></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -171,26 +171,26 @@
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control rounded" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Nome completo</label>
+                                <label class="m-auto p-2" for="name">Nome completo</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">Nome completo é obrigatório.</div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control rounded" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Endereço de email</label>
+                                <label class="m-auto p-2" for="email">Endereço de email</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">Email é obrigatório.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email inválido.</div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control rounded" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Número de telefone</label>
+                                <label class="m-auto p-2" for="phone">Número de telefone</label>
                                 <div class="invalid-feedback" data-sb-feedback="phone:required">Número de telefone é obrigatório.</div>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control rounded" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Mensagem</label>
+                                <label class="m-auto p-2" for="message">Mensagem</label>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">Mensagem é obrigatória.</div>
                             </div>
                             <!-- Submit success message-->
