--- a/index.html
+++ b/index.html
@@ -38,17 +38,62 @@
         <header class="masthead bg-black text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+                <!-- <img class="masthead-avatar mb-5" src="assets/img/avatar1.png" alt="..." /> -->
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Olá!</h1>
+                <!-- <h1 class="masthead-heading text-uppercase mb-0">Olá!</h1> -->
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <!-- <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
+                </div> -->
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</p>
+                <!-- <p class="masthead-subheading font-weight-light mb-0">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</p> -->
+
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div id="sliderGRID" class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="zoom">
+                      <img src="assets/img/slider/1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h1 id="tituloSLIDER">OLÁ!</h1>
+                      <h5 id="subtituloSLIDER">Me chamo Davi, tenho 19 anos e sou editor de vídeos!</h5>
+                    </div>
+                  </div>
+                  <div id="sliderGRID" class="carousel-item">
+                    <div class="zoom">
+                      <img src="assets/img/slider/1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h1 id="tituloSLIDER">Second slide label</h1>
+                      <h5 id="subtituloSLIDER">Some representative placeholder content for the second slide.</h5>
+                    </div>
+                  </div>
+                  <div id="sliderGRID" class="carousel-item">
+                    <div class="zoom">
+                      <img src="assets/img/slider/1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h1 id="tituloSLIDER">Third slide label</h1>
+                      <h5 id="subtituloSLIDER">Some representative placeholder content for the third slide.</h5>
+                    </div>
+                  </div>
+                </div>
+                <button id="botaoSLIDERprev" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button id="botaoSLIDERnext" class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
         </header>
         <!-- Portfolio Section-->
