--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
                   </div>
                   <div id="sliderGRID" class="carousel-item">
                     <div class="zoom">
-                      <img src="assets/img/slider/1.png" class="d-block w-100" alt="...">
+                      <img src="assets/img/slider/2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-caption d-none d-md-block">
-                      <h1 id="tituloSLIDER">Second slide label</h1>
-                      <h5 id="subtituloSLIDER">Some representative placeholder content for the second slide.</h5>
+                      <h1 id="tituloSLIDER">EXPERIÊNCIA</h1>
+                      <h5 id="subtituloSLIDER">Conheça mais sobre mim e meu trabalho clicando aqui.</h5>
                     </div>
                   </div>
                   <div id="sliderGRID" class="carousel-item">
                     <div class="zoom">
-                      <img src="assets/img/slider/1.png" class="d-block w-100" alt="...">
+                      <img src="assets/img/slider/3.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-caption d-none d-md-block">
-                      <h1 id="tituloSLIDER">Third slide label</h1>
-                      <h5 id="subtituloSLIDER">Some representative placeholder content for the third slide.</h5>
+                      <h1 id="tituloSLIDER">QUER ME CONTRATAR?</h1>
+                      <h5 id="subtituloSLIDER">Clique aqui e me mande uma mensagem.</h5>
                     </div>
                   </div>
                 </div>
@@ -94,6 +94,7 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+              <h1 id="legendaSLIDER" class="masthead-subheading font-weight-light m-0 pt-2">Passe o mouse ou toque na tela.</h1>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -179,119 +180,57 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto p-5"><p class="lead">Possuo aproximadamente 8 anos na área e já trabalhei para grandes YouTubers, um deles com mais de 1 milhão de inscritos. Também, administrei meu canal no YouTube, com pouco mais de 15.000 inscritos na plataforma, fazendo a edição de todos os vídeos.</p></div>
-                    <div class="col-lg-4 me-auto"><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." /></div>
+                    <div class="col-lg-4 ms-auto pt-5"><h5 id="legendaSOBRE">Possuo aproximadamente <i style="background: rgba(204, 0, 204, 0.5);">8 anos de experiência</i>  e já trabalhei para grandes YouTubers e Páginas, com <i style="background: rgba(204, 0, 204, 0.5);">milhares e até milhões de seguidores.</i>  Também, administrei meu canal no YouTube, com pouco mais de <i style="background: rgba(204, 0, 204, 0.5);">15.000 inscritos na plataforma</i>, fazendo a edição de todos os vídeos.</h5></div>
+                    <div class="col-lg-4 me-auto"><img id="avatarSOBRE" class="masthead-avatar ms-2" src="assets/img/avatar3.png" style="width: 50vh; height: 50vh; border-radius: 300px;" alt="..." /></div>
                 </div>
                 <!-- About Section Button-->
-                <div class="text-center mt-4">
+                <!-- <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
                         <i class="fas fa-download me-2"></i>
                         Free Download!
                     </a>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Contact Section-->
-        <section class="page-section bg-black" id="contact">
-            <div class="container">
-                <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contato</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Form-->
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 col-xl-7">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control rounded" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label class="m-auto p-2" for="name">Nome completo</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">Nome completo é obrigatório.</div>
-                            </div>
-                            <!-- Email address input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control rounded" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label class="m-auto p-2" for="email">Endereço de email</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">Email é obrigatório.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email inválido.</div>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control rounded" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label class="m-auto p-2" for="phone">Número de telefone</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">Número de telefone é obrigatório.</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control rounded" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label class="m-auto p-2" for="message">Mensagem</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">Mensagem é obrigatória.</div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Formulário enviado com sucesso!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Enviar</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <!-- Footer-->
-        <footer class="footer text-center bg-black">
+        <footer id="contact" class="page-section footer text-center bg-black">
             <div class="container">
+              <h2 class="page-section-heading text-center text-uppercase text-white">CONTATO</h2>
+              <!-- Icon Divider-->
+              <div class="divider-custom divider-light">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                  <div class="divider-custom-line"></div>
+              </div>
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                    <!-- <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">QUANDO COMEÇOU?</h4>
                         <p class="lead mb-0">
                             2215 John Daniel Drive
                             <br />
                             Clark, MO 65243
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <div class="col-lg-12 mb-5 mb-lg-0">
+                        <!-- <h4 class="text-uppercase mb-4">REDES SOCIAIS</h4> -->
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                     </div>
                     <!-- Footer About Text-->
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </footer>
