Ajuste de alinhamento na aba Sobre.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto pt-5"><h5 id="legendaSOBRE">Possuo aproximadamente <i style="background: rgba(204, 0, 204, 0.5);">8 anos de experiência</i>  e já trabalhei para grandes YouTubers e Páginas, com <i style="background: rgba(204, 0, 204, 0.5);">milhares e até milhões de seguidores.</i>  Também, administrei meu canal no YouTube, com pouco mais de <i style="background: rgba(204, 0, 204, 0.5);">15.000 inscritos na plataforma</i>, fazendo a edição de todos os vídeos.</h5></div>
-                    <div class="col-lg-4 me-auto"><img id="avatarSOBRE" class="masthead-avatar ms-2" src="assets/img/avatar3.png" style="width: 50vh; height: 50vh; border-radius: 300px;" alt="..." /></div>
+                    <div class="col-lg-4 me-auto"><img id="avatarSOBRE" class="masthead-avatar mb-5" src="assets/img/eu.png" alt="..." /></div>
                 </div>
                 <!-- About Section Button-->
                 <!-- <div class="text-center mt-4">
