Ajuste de tamanhos, slider e iframe.

--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
                 <!-- Masthead Avatar Image-->
                 <!-- <img class="masthead-avatar mb-5" src="assets/img/avatar1.png" alt="..." /> -->
                 <!-- Masthead Heading-->
-                <!-- <h1 class="masthead-heading text-uppercase mb-0">Olá!</h1> -->
+                <h1 class="masthead-heading text-uppercase">DSM</h1>
                 <!-- Icon Divider-->
-                <!-- <div class="divider-custom divider-light">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div> -->
+                </div>
                 <!-- Masthead Subheading-->
-                <!-- <p class="masthead-subheading font-weight-light mb-0">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</p> -->
+                <div class="row">
+                    <div class="col-lg-12 ms-auto mb-5"><h5 id="legendaTOPO">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</h5></div>
+                </div>
+                <!-- <h5 id="legendaTOPO" class="masthead-subheading font-weight-light mb-2">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</h5> -->
 
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width: 90%; height: 100%;">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -59,7 +62,7 @@
                 <div id="sliderGRID" class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="zoom">
-                      <a href="#portfolio"><img src="assets/img/slider/1.png" class="d-block w-100" alt="..."></a>
+                      <a href="#portfolio"><img id="imagemSLIDER" src="assets/img/slider/1a.png" class="d-block w-100 img-fluid" alt="..."></a>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
                       <h1 id="tituloSLIDER">OLÁ!</h1>
@@ -68,7 +71,7 @@
                   </div>
                   <div id="sliderGRID" class="carousel-item">
                     <div class="zoom">
-                      <a href="#about"><img src="assets/img/slider/2.png" class="d-block w-100" alt="..."></a>
+                      <a href="#about"><img id="imagemSLIDER" src="assets/img/slider/2a.png" class="d-block w-100 img-fluid" alt="..."></a>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
                       <h1 id="tituloSLIDER">EXPERIÊNCIA</h1>
@@ -77,7 +80,7 @@
                   </div>
                   <div id="sliderGRID" class="carousel-item">
                     <div class="zoom">
-                      <a href="#contact"><img src="assets/img/slider/3.png" class="d-block w-100" alt="..."></a>
+                      <a href="#contact"><img id="imagemSLIDER" src="assets/img/slider/3a.png" class="d-block w-100 img-fluid" alt="..."></a>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
                       <h1 id="tituloSLIDER">QUER ME CONTRATAR?</h1>
@@ -95,6 +98,7 @@
                 </button>
               </div>
               <h1 id="legendaSLIDER" class="masthead-subheading font-weight-light m-0 pt-2">Passe o mouse ou toque na tela.</h1>
+
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -109,7 +113,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
 
-                <div class="ratio ratio-16x9">
+                <div class="ratio ratio-16x9" style="width: 90%; height: 100%; margin: 0 auto;">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ABM5UJeILjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
