Ajuste de tamanho das divs.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <div class="row">
-                    <div class="col-lg-12 ms-auto mb-5"><h5 id="legendaTOPO">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</h5></div>
+                    <div class="col-lg-12 ms-auto mt-2"><h5 id="legendaTOPO">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos?</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 ms-auto m-4"><h5 id="legendaTOPO" style="background: rgba(204, 0, 204, 0.5);">VOCÊ ESTÁ NO LUGAR CERTO!</h5>
+                    </div>
                 </div>
                 <!-- <h5 id="legendaTOPO" class="masthead-subheading font-weight-light mb-2">Quer turbinar seus vídeos com uma boa edição e deixar seus seguidores satisfeitos? Você está no lugar certo!</h5> -->
 
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width: 90%; height: 100%;">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width: 85%; height: 100%;">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -113,7 +118,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
 
-                <div class="ratio ratio-16x9" style="width: 90%; height: 100%; margin: 0 auto;">
+                <div class="ratio ratio-16x9" style="width: 85%; height: 100%; margin: 0 auto;">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ABM5UJeILjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
@@ -131,8 +136,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto pt-5"><h5 id="legendaSOBRE">Possuo aproximadamente <i style="background: rgba(204, 0, 204, 0.5);">8 anos de experiência</i>  e já trabalhei para grandes YouTubers e Páginas, com <i style="background: rgba(204, 0, 204, 0.5);">milhares e até milhões de seguidores.</i>  Também, administrei meu canal no YouTube, com pouco mais de <i style="background: rgba(204, 0, 204, 0.5);">15.000 inscritos na plataforma</i>, fazendo a edição de todos os vídeos.</h5></div>
-                    <div class="col-lg-4 me-auto"><img id="avatarSOBRE" class="masthead-avatar mb-5" src="assets/img/eu.png" alt="..." /></div>
+                    <div class="col-lg-4 ms-auto pt-5"><h5 id="legendaSOBRE" style="width: 85%; height: 100%; margin: 0 auto;">Possuo aproximadamente <i style="background: rgba(204, 0, 204, 0.5);">8 anos de experiência</i>  e já trabalhei para grandes YouTubers e Páginas, com <i style="background: rgba(204, 0, 204, 0.5);">milhares e até milhões de seguidores.</i>  Também, administrei meu canal no YouTube, com pouco mais de <i style="background: rgba(204, 0, 204, 0.5);">15.000 inscritos na plataforma</i>, fazendo a edição de todos os vídeos.</h5></div>
+                    <div class="col-lg-4 me-auto pt-3"><img id="avatarSOBRE" class="masthead-avatar mb-5" src="assets/img/eu.png" alt="..." /></div>
                 </div>
                 <!-- About Section Button-->
                 <!-- <div class="text-center mt-4">
