--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <div class="ratio ratio-16x9" style="width: 85%; height: 100%; margin: 0 auto;">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ABM5UJeILjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
+                <p id="legendaPORTFOLIO" class="masthead-subheading font-weight-light m-0 pt-2 text-center">Veja meus trabalhos.</p>
             </div>
         </section>
         <!-- About Section-->
