--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-12 mb-5 mb-lg-0">
                         <!-- <h4 class="text-uppercase mb-4">REDES SOCIAIS</h4> -->
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://instagram.com/dsmzin"><i class="fab fa-fw fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/dsmzin"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://instagram.com/dsmzin" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/dsmzin" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <!-- <div class="col-lg-4">
