Sessão "Clientes Destaque" adicionada, com cards e páginas próprias.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+
+        <!-- TESTE BOOTSTRAP -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -127,6 +131,44 @@
                 </div>
                 <p id="legendaPORTFOLIO" class="masthead-subheading font-weight-light m-0 pt-2 text-center">Veja meus trabalhos.</p>
             </div>
+
+            <div id="containerCARD" class="container d-flex align-items-center flex-column">
+              <h5 id="legendaTOPO" style="background: rgba(204, 0, 204, 0.5);">CLIENTES DESTAQUE</h5>
+              <div class="row pt-3">
+                <div class="col-lg-4 p-2">
+                  <a href="leticia_page.html">
+                    <div id="cardCOR" class="card mx-auto" style="width: 12rem;">
+                      <img src="assets/img/cards/leticia.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p id="legendaCARD" class="card-text text-center">Leticia Shirakiin</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <div class="col-lg-4 p-2">
+                  <a href="dearo_manu_page.html">
+                    <div id="cardCOR" class="card mx-auto" style="width: 12rem;">
+                      <img src="assets/img/cards/dearo_manu.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p id="legendaCARD" class="card-text text-center">Dearo e Manu</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <div class="col-lg-4 p-2">
+                  <a href="organizada_page.html">
+                    <div id="cardCOR" class="card mx-auto" style="width: 12rem;">
+                      <img src="assets/img/cards/organizada.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p id="legendaCARD" class="card-text text-center">Torcida Imperial</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
         </section>
         <!-- About Section-->
         <section class="page-section bg-black text-white mb-0" id="about">
@@ -199,9 +241,9 @@
         </div>
 
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- <script src="js/scripts.js"></script> -->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
