Correções no dimensionamento mobile dos iframes.

--- a/dearo_manu_page.html
+++ b/dearo_manu_page.html
@@ -35,8 +35,12 @@
     </div>
 
       <div class="container">
-        <div class="ratio ratio-16x9" style="width: 75%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/hnpVICy4zi4" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        <div class="row">
+          <div class="col">
+            <div id="frameYT" class="ratio ratio-16x9" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/hnpVICy4zi4" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
 
