--- a/leticia_page.html
+++ b/leticia_page.html
@@ -35,36 +35,40 @@
     </div>
 
       <div class="container">
-        <div class="ratio ratio-16x9" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/wpsDPtpDWVI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <div class="row">
+          <div class="col">
+            <div id="frameYT" class="ratio ratio-16x9" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/wpsDPtpDWVI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uz9T3jy-4" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/B3uz9T3jy-4" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/40-mfurWY14" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/40-mfurWY14" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/QG3_K5ASdbc" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/QG3_K5ASdbc" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/CDX8eV92pLY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/CDX8eV92pLY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/OgM94VdZ8po" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/OgM94VdZ8po" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/R_MYQHQ-zQg" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/R_MYQHQ-zQg" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/a4f2IoGcZEI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/a4f2IoGcZEI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
 
