--- a/organizada_page.html
+++ b/organizada_page.html
@@ -35,52 +35,56 @@
     </div>
 
       <div class="container">
-        <div class="ratio ratio-16x9" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/wvzVcywhDdQ" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <div class="row">
+          <div class="col">
+            <div id="frameYT" class="ratio ratio-16x9" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/wvzVcywhDdQ" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/o-Jsux5iqGs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/o-Jsux5iqGs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/EFwDedrYMjY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/EFwDedrYMjY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/WqaytKfNzYA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WqaytKfNzYA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/PPNLSYYa7BE" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/PPNLSYYa7BE" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZOz1pP9FIYE" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZOz1pP9FIYE" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dPDxCT62MzQ" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/dPDxCT62MzQ" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dTVl8TkN00k" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/dTVl8TkN00k" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/41QPjp66y-k" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/41QPjp66y-k" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Idq0OrcFFu8" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Idq0OrcFFu8" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/I71c1d1S3bg" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/I71c1d1S3bg" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
 
-        <div class="ratio ratio-16x9 mt-3" style="width: 65%; height: 100%; margin: 0 auto;">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/b0yzRVJB_XA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <div id="frameYT" class="ratio ratio-16x9 mt-3" style="width: 75%; margin: 0 auto;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/b0yzRVJB_XA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
 
