Correção js automação do ano by: pedroks;

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white bg-black">
-            <div class="container"><small>Copyright &copy; DSM 2022</small></div>
+            <div class="container"><small id="copyright"></small></div>
         </div>
 
         <!-- Bootstrap core JS-->
